# russian_g2p

./: .gitignore  README.md  pyproject.toml  requirements.txt
