[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = 'russian_g2p'
description = 'Grapheme to Phoneme for Russian Language'
version = '1.1.0'

authors = [{ name = 'nsu_ai team' }]
url = 'https://github.com/nsu-ai/russian_g2p/'
license = 'MIT'

keywords = ['phonetics', 'russian', 'lingiustics']

python_requires = ">=3.6, <3.9"
classifiers = [
    'Development Status :: 3 - Alpha',

    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Topic :: System :: Networking',
    'Topic :: Scientific/Engineering',

    'License :: OSI Approved :: MIT License',

    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX :: Linux',
    'Operating System :: MacOS',

    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
]
dependencies = [
    'lxml',
    'dawg',
    'rnnmorph @ git+https://github.com/bond005/rnnmorph.git',
]

[tool.hatch.build.targets.wheel]
only-include = ["russian_g2p"]

[tool.hatch.metadata]
allow-direct-references = true
